--- a/Pages/Cliente/Cliente.razor
+++ b/Pages/Cliente/Cliente.razor
@@ -24,15 +24,8 @@
         text-align: center;
     }
 
-    .titulo-proveedores {
-        background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); /* Fondo oscuro */
-        color: #ffffff; /* Texto blanco */
-        text-align: center; /* Centrar texto */
-        padding: 10px; /* Añadir espacio alrededor del texto */
-    }
 </style>
 
-<h1 class="titulo-proveedores d-print-none">Listado de Clientes</h1>
 <h1 class="d-none d-print-block text-center">Listado de Clientes</h1>
 
 
@@ -147,8 +140,8 @@
             </div>
 
             <div class="row-12 mt-2">
-                <table class="table table-hover table-striped">
-                    <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
+                <table class="table table-hover table-striped ">
+                    <thead class="bg-black text-white">
                         <tr>
                             <th>#</th>
                             <th>Cedula</th>
