--- a/Pages/Facturacion/AddFactura.razor
+++ b/Pages/Facturacion/AddFactura.razor
@@ -2,7 +2,6 @@
 @using FactuSystem.Data.Request;
 @using FactuSystem.Data.Response;
 @inject IJSRuntime JSRuntime;
-<PageTitle>Yoja's Drinks & Heladería Los Paso</PageTitle>
 
 <EditForm Model="facturaRequest" OnValidSubmit="Send">
     @*Disenar el espacio para el cliente o contacto a facturarle*@
@@ -23,19 +22,19 @@
             }
         </datalist>
         
-        <button 
+        @*<button 
             class="btn btn-outline-success d-print-none"
             type="button" id="button-addon2"
             @onclick="async()=>{
             await CargarContacto(); }">
             <span class="oi oi-reload"></span>
-        </button>
+        </button>*@
     </div>
 
     @*Disenar el espacio para los productos a facturar*@
     <div class="card p-2 d-print-none">
-        <div class="card-header card-title">
-            <strong>¿Que desea el cliente?</strong>
+        <div class="card-header card-title bg-black text-white">
+            <h5>¿Qué desea el cliente?</h5>
         </div>
         <div class="input-group mb-3 mt-2">
             <input class="form-control"
@@ -55,12 +54,12 @@
                 }
             </datalist>
             
-            <button class="btn btn-outline-success d-print-none"
+            @*<button class="btn btn-outline-success d-print-none"
                 type="button" id="button-addon2"
                 @onclick="async()=>{
                 await CargarProducto(); }">
                 <span class="oi oi-reload"></span>
-            </button>
+            </button>*@
             
         </div>
         <div class="input-group mb-3">
@@ -90,7 +89,7 @@
     @*Disenar los elementos que se cargan a la factura*@
     <h5 class="mt-1"><b>Detalle de la factura N°:</b> @ultimoIdFactura</h5>
     <table class="table table-hover">
-        <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
+        <thead class="bg-black text-white">
             <tr>
                 <th class="col w-25">
                     Cantidad
@@ -300,6 +299,50 @@
             facturaRequest.Detalles.Remove(detalle);
         }
     }
+    
+   async Task CargarContacto()
+    { 
+        //Llenar la lista de contactos para mostrar al usuario...
+        var r = await clienteServices.Consultar("");
+        if (r.Success)
+        {
+            Contactos = r.Data!;
+        }
+    }
+    async Task CargarProducto()
+    { 
+        //Llenar la lista de contactos para mostrar al usuario...
+        var r = await productoServices.Consultar("");
+        if (r.Success)
+        {
+            Productos = r.Data!;
+        }
+    }
+
+    //Esto es para mostrar el Numero de la factura a registrar
+    int ultimoIdFactura = 0;
+    async Task Consultar()
+    {
+        var resultado = await facturaServices.Consultar(Filtro);
+        if (resultado.Success)
+        {
+            Facturas = resultado.Data?.OrderByDescending(f => f.Fecha).ToList() ?? new List<FacturaResponse>();
+
+            // Obtener el Id de la última factura registrada + 1
+            ultimoIdFactura = Facturas.FirstOrDefault()?.Id + 1 ?? 1;
+        }
+        StateHasChanged();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await CargarContacto();
+        await CargarProducto();
+        await Consultar();
+        
+
+    }
+
     void AgregarAlDetalle()
     {
         if (string.IsNullOrEmpty(Nombre))
@@ -358,52 +401,11 @@
             Message = null;
         }
     }
-   async Task CargarContacto()
-    { 
-        //Llenar la lista de contactos para mostrar al usuario...
-        var r = await clienteServices.Consultar("");
-        if (r.Success)
-        {
-            Contactos = r.Data!;
-        }
-    }
-    async Task CargarProducto()
-    { 
-        //Llenar la lista de contactos para mostrar al usuario...
-        var r = await productoServices.Consultar("");
-        if (r.Success)
-        {
-            Productos = r.Data!;
-        }
-    }
-
-    //Esto es para mostrar el Numero de la factura a registrar
-    int ultimoIdFactura = 0;
-    async Task Consultar()
-    {
-        var resultado = await facturaServices.Consultar(Filtro);
-        if (resultado.Success)
-        {
-            Facturas = resultado.Data?.OrderByDescending(f => f.Fecha).ToList() ?? new List<FacturaResponse>();
-
-            // Obtener el Id de la última factura registrada + 1
-            ultimoIdFactura = Facturas.FirstOrDefault()?.Id + 1 ?? 1;
-        }
-        StateHasChanged();
-    }
-
-    protected override async Task OnInitializedAsync()
-    {
-        await CargarContacto();
-        await CargarProducto();
-        await Consultar();
-        
-
-    }
+   
     public string TypePayment {get; set;} = string.Empty;
     async Task Send()
     {
-        if (facturaRequest.SaldoPagado > facturaRequest.SaldoPagado - facturaRequest.TotalDesc 
+        if (facturaRequest.SaldoPagado > facturaRequest.SubTotal - facturaRequest.TotalDesc 
             && facturaRequest.TypePayment == "2")
         {
             Pendiente();
