--- a/Pages/Category/Category.razor
+++ b/Pages/Category/Category.razor
@@ -1,6 +1,5 @@
 @page "/category"
 @attribute [Authorize]
-<PageTitle>Yoja's Drinks & Heladería Los Paso</PageTitle>
 
 <style>
     /* Estilo para el contenedor de la tabla */
@@ -18,19 +17,13 @@
         text-align: center;
     }
 
-    .titulo-proveedores {
-        background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);
-        color: #ffffff; /* Texto blanco */
-        text-align: center; /* Centrar texto */
-        padding: 10px; /* Añadir espacio alrededor del texto */
-    }
 </style>
 
 
 
 <div class="row">
     <div class="col-12">
-        <h1 class="titulo-proveedores">Listado de categorías</h1>
+        <h1 class="d-none d-print-block text-center">Listado de categorías</h1>
     </div>
 </div>
 
@@ -96,7 +89,7 @@
 
             <div class="row-12 mt-2">
                 <table class="table table-striped">
-                    <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
+                    <thead class="bg-black text-white">
                         <tr>
                             <th>#</th>
                             <th>Nombre</th>
