--- a/Pages/Facturacion/ViewPagos.razor
+++ b/Pages/Facturacion/ViewPagos.razor
@@ -23,14 +23,12 @@
     }
 
     .titulo-proveedores {
-        background-color: rgb(0, 0, 53); /* Fondo oscuro */
+        background-image:  linear-gradient(180deg, #0d0e0f 0%, #040505 70%); /* Fondo oscuro */
         color: #ffffff; /* Texto blanco */
         text-align: center; /* Centrar texto */
         padding: 10px; /* Añadir espacio alrededor del texto */
     }
 </style>
-
-
 
 <div class="row">
     <div class="col-12">
@@ -71,7 +69,7 @@
 </div>
 
 <div class="table-container">
-    <div class="card w-75">
+    <div class="card w-100">
         <div class="card-body">
             <div class="row">
                 <div class="col-10">
@@ -81,17 +79,18 @@
                         Nueva pago
                     </button>
                 </div>
-                <div class="col-1">
-                    <button class="btn btn-danger" @onclick="Producto">Back</button>
+                <div class="col text-end">
+                    <button class="btn btn-danger" @onclick="Back">
+                        <span class="oi oi-arrow-thick-left"></span>
+                    </button>
                 </div>
             </div>
             
             <div class="row mt-2">
-                <div class="col-7"></div>
-                <div class="col-5">
-                    <div class="col input-group">
+                <div class="col-8"></div>
+                <div class="col">
+                    <div class="input-group">
                         <input type="text" placeholder="Nombre del proveedor" @bind="Filtro">
-
                         <button class="btn btn-outline-primary" type="button" id="button-addon2" @onclick="()=>CargarContactos()">
                             <span class="oi oi-magnifying-glass"></span>
                         </button>
@@ -101,7 +100,7 @@
 
             <div class="row-12 mt-2">
                 <table class="table table-hover">
-                    <thead style="background-color: rgb(0, 0, 53); color: #ffffff;">
+                    <thead class="bg-black text-white">
                         <tr>
                             <th>#</th>
                             <th>FacturaId</th>
@@ -147,7 +146,7 @@
     public CategoriaRequest categoriaRequest { get; set; } = new();
     public bool showCard { get; set; } = false;
 
-    void Producto()
+    void Back()
     {
         urlHelper.NavigateTo("producto", true);
     }
