--- a/Pages/Producto/Producto.razor
+++ b/Pages/Producto/Producto.razor
@@ -23,15 +23,8 @@
         text-align: center;
     }
 
-    .titulo-proveedores {
-        background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);
-        color: #ffffff; /* Texto blanco */
-        text-align: center; /* Centrar texto */
-        padding: 10px; /* Añadir espacio alrededor del texto */
-    }
 </style>
-<PageTitle>Yoja's Drinks & Heladería Los Paso</PageTitle>
-<h1 class="titulo-proveedores d-print-none">Listado de Productos</h1>
+
 <h1 class="d-none d-print-block text-center">Listado de Productos</h1>
 
 <div class="modal" style="display: @(showCard ? "block" : "none"); background-color: rgba(0, 0, 0, 0.5);" tabindex="-1" role="dialog">
@@ -181,7 +174,7 @@
 
             <div class="row-12 mt-2">
                 <table class="table table-striped">
-                    <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
+                    <thead class="bg-black text-white">
                         <tr>
                             <th>Codigo</th>
                             <th>Stock</th>
