--- a/Pages/Usuario/Usuario.razor
+++ b/Pages/Usuario/Usuario.razor
@@ -22,19 +22,11 @@
         text-align: center;
     }
 
-    .titulo-proveedores {
-        background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);
-        color: #ffffff; /* Texto blanco */
-        text-align: center; /* Centrar texto */
-        padding: 10px; /* Añadir espacio alrededor del texto */
-    }
 </style>
-
-
 
 <div class="row">
     <div class="col-12">
-        <h1 class="titulo-proveedores">Listado de usuarios</h1>
+        <h1 class="d-none d-print-block text-center">Listado de usuarios</h1>
     </div>
 </div>
 
@@ -131,7 +123,7 @@
 
             <div class="row-12 mt-2">
                 <table class="table table-striped">
-                    <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
+                    <thead class="bg-black text-white">
                         <tr>
                             <th>#</th>
                             <th>Nombre</th>
