--- a/Pages/About.razor
+++ b/Pages/About.razor
@@ -8,7 +8,7 @@
     }
 
     h1 {
-        background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);
+        background-image: linear-gradient(180deg, #0d0e0f 0%, #040505 70%);
         color: white;
         padding: 10px;
     }
@@ -30,7 +30,7 @@
 <PageTitle>About</PageTitle>
 
 <h1><img src="logo.jpg" alt="" class="rounded-circle img-fluid img-thumbnail" style="width: 60px;">
-    <strong>Versión del Software: 1.0</strong>
+    <strong>Versión del Software: 2.0</strong>
 </h1>
     <h2><strong>Desarrollador:</strong></h2>
     <div class="row">
@@ -49,7 +49,7 @@
     <h2><strong>Descripción del Software:</strong></h2>
 
     <p>
-        Este programa mejora apticamente el funcionamiento de esta muebleria . Los aspectos más destacados 
+        Este programa mejora apticamente el funcionamiento de este Liquor Store. Los aspectos destacados 
         incluyen:
     </p>
     <ul>
@@ -65,9 +65,9 @@
     </ul>
     <h2><strong>Créditos y Agradecimientos:</strong></h2>
     <p>
-        En primer lugar, se le agradece al Lic. Félix Benzan y a la Lic. Jennifer Karina Disla Vasquez por 
-        impartir sus conocimientos con nosotros, ya que nos fue de mucha ayuda. También a los demás colegas 
-        que se ofrecieron a ayudar y, por último, pero no menos importante, le agradecemos a ChatGPT, el 
-        cual nos ayudó a solucionar muchos errores en el código, ya que sin la ayuda de todos los mencionados, 
+        En primer lugar, me gustaría agradecer al Lic. Félix Benzan y a la Lic. Jennifer Karina Disla Vasquez por 
+        impartir sus conocimientos, ya que fueron de mucha ayuda. También a los demás colegas 
+        que se ofrecieron a ayudar y, por último, pero no menos importante, le agradesco a ChatGPT, el 
+        cual ayudó a solucionar muchos errores en el código, ya que sin la ayuda de todos los mencionados, 
         este proyecto no hubiese existido. 
     </p>
