--- a/Pages/About.razor
+++ b/Pages/About.razor
@@ -35,7 +35,7 @@
     <h2><strong>Desarrollador:</strong></h2>
     <div class="row">
         <div class="col text-center">
-            <img src="Marcos3.jpg" alt="" class="rounded-circle img-fluid img-thumbnail" style="width: 180px;">
+            <img src="me.jpg" alt="" class="rounded-circle img-fluid img-thumbnail" style="width: 180px;">
             <p class="text-center"><b>Marcos De Vargas Serrano</b></p>
         </div>
         <div class="col text-center">
