--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @using System.Security.Claims
 
-<PageTitle>Yoja's Drinks & Heladería Los Paso</PageTitle>
+<PageTitle>CASA IRYS</PageTitle>
 
 <div class="page">
     <AuthorizeView>
